src/app/component/snapshots/jedit__app__component__confirm_dialog__test__render_long_line_test.snap
---
source: src/app/component/confirm_dialog.rs
expression: render_to_string(&dialog)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"    ┌──────────────────────────────────────────────────────────────────────┐    "
"    │                                                                      │    "
"    │ Error:                                                               │    "
"    │ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do      │    "
"    │ eiusmod tempor incididunt ut labore et dolore magna aliqua.          │    "
"    │                                                                      │    "
"    │                               continue?                              │    "
"    │                                                                      │    "
"    └─────────────────────────────[Y]es / [N]o─────────────────────────────┘    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
