src/app/component/snapshots/jedit__app__component__confirm_dialog__test__render_multiline_test.snap
---
source: src/app/component/confirm_dialog.rs
expression: render_to_string(&dialog)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                            ┌──────────────────────┐                            "
"                            │                      │                            "
"                            │ Error:               │                            "
"                            │ Broken IO pipe       │                            "
"                            │ continue?            │                            "
"                            │                      │                            "
"                            └─────[Y]es / [N]o─────┘                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
