src/app/component/snapshots/jedit__app__component__confirm_dialog__test__render_test-2.snap
---
source: src/app/component/confirm_dialog.rs
expression: render_to_string(&dialog)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                        ┌──────────────────────────────┐                        "
"                        │                              │                        "
"                        │ Save all files in workspace? │                        "
"                        │                              │                        "
"                        └─────────[Y]es / [N]o─────────┘                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
